Got QwiicTaskBase starting to work.

--- a/platformio.ini
+++ b/platformio.ini
@@ -310,8 +310,8 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 ; src_filter = ${dir.tasks}
 ; test_filter = tasks
-; src_filter = ${dir.test_QwiicButton}
-; test_filter = test_QwiicButton
+src_filter = ${dir.test_QwiicButton}
+test_filter = test_QwiicButton
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
@@ -320,8 +320,8 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_QueueManager
 ; src_filter = ${dir.test_BoardCommsTask}
 ; test_filter = test_BoardCommsTask
-src_filter = ${dir.test_TaskBase}
-test_filter = test_TaskBase
+; src_filter = ${dir.test_TaskBase}
+; test_filter = test_TaskBase
 
 lib_deps =
   ${env.lib_deps}
