tested QwiicButton with real button

--- a/platformio.ini
+++ b/platformio.ini
@@ -310,8 +310,10 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 ; src_filter = ${dir.tasks}
 ; test_filter = tasks
-src_filter = ${dir.test_QwiicButton}
-test_filter = test_QwiicButton
+; src_filter = ${dir.test_QwiicButtonWithMock}
+; test_filter = test_QwiicButtonWithMock
+src_filter = ${dir.test_QwiicButtonWithButton}
+test_filter = test_QwiicButtonWithButton
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
@@ -349,7 +351,8 @@ button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
 tasks = +<tasks/>
-test_QwiicButton = +<test_QwiicButton/>
+test_QwiicButtonWithMock = +<test_QwiicButtonWithMock/>
+test_QwiicButtonWithButton = +<test_QwiicButtonWithButton/>
 test_NintendoController = +<test_NintendoController/>
 test_ThrottleState = +<test_ThrottleState/>
 test_QueueManager = +<test_QueueManager/>
