--- a/platformio.ini
+++ b/platformio.ini
@@ -312,10 +312,10 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = tasks
 ; src_filter = ${dir.test_QwiicButtonWithMock}
 ; test_filter = test_QwiicButtonWithMock
-src_filter = ${dir.test_QwiicButtonWithButton}
-test_filter = test_QwiicButtonWithButton
-; src_filter = ${dir.test_NintendoController}
-; test_filter = test_NintendoController
+; src_filter = ${dir.test_QwiicButtonWithButton}
+; test_filter = test_QwiicButtonWithButton
+src_filter = ${dir.test_NintendoController}
+test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
 ; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
