test_BoardCommsTask seems to be OK. About to implement Orchestrator concept.

--- a/platformio.ini
+++ b/platformio.ini
@@ -314,14 +314,14 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_QwiicButtonWithMock
 ; src_filter = ${dir.test_QwiicButtonWithButton}
 ; test_filter = test_QwiicButtonWithButton
-src_filter = ${dir.test_NintendoController}
-test_filter = test_NintendoController
+; src_filter = ${dir.test_NintendoController}
+; test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
 ; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
-; src_filter = ${dir.test_BoardCommsTask}
-; test_filter = test_BoardCommsTask
+src_filter = ${dir.test_BoardCommsTask}
+test_filter = test_BoardCommsTask
 ; src_filter = ${dir.test_TaskBase}
 ; test_filter = test_TaskBase
 
