OrchestratorTask working. QwiicButton responding when requested.

--- a/platformio.ini
+++ b/platformio.ini
@@ -320,10 +320,12 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
-src_filter = ${dir.test_BoardCommsTask}
-test_filter = test_BoardCommsTask
+; src_filter = ${dir.test_BoardCommsTask}
+; test_filter = test_BoardCommsTask
 ; src_filter = ${dir.test_TaskBase}
 ; test_filter = test_TaskBase
+src_filter = ${dir.test_Orchestrator}
+test_filter = test_Orchestrator
 
 lib_deps =
   ${env.lib_deps}
@@ -351,10 +353,11 @@ button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
 tasks = +<tasks/>
+test_BoardCommsTask = +<test_BoardCommsTask/>
+test_NintendoController = +<test_NintendoController/>
+test_Orchestrator = +<test_Orchestrator/>
+test_QueueManager = +<test_QueueManager/>
 test_QwiicButtonWithMock = +<test_QwiicButtonWithMock/>
 test_QwiicButtonWithButton = +<test_QwiicButtonWithButton/>
-test_NintendoController = +<test_NintendoController/>
-test_ThrottleState = +<test_ThrottleState/>
-test_QueueManager = +<test_QueueManager/>
-test_BoardCommsTask = +<test_BoardCommsTask/>
 test_TaskBase = +<test_TaskBase/>
+test_ThrottleState = +<test_ThrottleState/>
