test_ThrottleTask Removed SendNotf stuff

--- a/platformio.ini
+++ b/platformio.ini
@@ -310,12 +310,12 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 ; src_filter = ${dir.test_BoardCommsTask}
 ; test_filter = test_BoardCommsTask
-src_filter = ${dir.test_DisplayTask}
-test_filter = test_DisplayTask
+; src_filter = ${dir.test_DisplayTask}
+; test_filter = test_DisplayTask
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
-; src_filter = ${dir.test_ThrottleState}
-; test_filter = test_ThrottleState
+src_filter = ${dir.test_ThrottleState}
+test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
 ; src_filter = ${dir.test_QwiicButtonWithMock}
