--- a/platformio.ini
+++ b/platformio.ini
@@ -308,14 +308,14 @@ platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
-; src_filter = ${dir.test_BoardCommsTask}
-; test_filter = test_BoardCommsTask
+src_filter = ${dir.test_BoardCommsTask}
+test_filter = test_BoardCommsTask
 ; src_filter = ${dir.test_DisplayTask}
 ; test_filter = test_DisplayTask
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
-src_filter = ${dir.test_ThrottleState}
-test_filter = test_ThrottleState
+; src_filter = ${dir.test_ThrottleState}
+; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
 ; src_filter = ${dir.test_QwiicButtonWithMock}
@@ -352,7 +352,7 @@ main = +<main/>
 button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
-tasks = +<tasks/>
+; tasks = +<tasks/>
 test_BoardCommsTask = +<test_BoardCommsTask/>
 test_DisplayTask = +<test_DisplayTask/>
 test_NintendoController = +<test_NintendoController/>
