--- a/platformio.ini
+++ b/platformio.ini
@@ -308,10 +308,11 @@ platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
-src_filter = ${dir.test_BoardCommsTask}
-test_filter = test_BoardCommsTask
-; src_filter = ${dir.test_DisplayTask}
-; test_filter = test_DisplayTask
+; src_filter = ${dir.test_BoardCommsTask}
+; test_filter = test_BoardCommsTask
+src_filter = ${dir.test_DisplayTask}
+test_filter = test_DisplayTask
+
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
