--- a/platformio.ini
+++ b/platformio.ini
@@ -310,23 +310,16 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 
 ; src_filter = ${dir.test_BoardCommsTask}
 ; test_filter = test_BoardCommsTask
-src_filter = ${dir.test_DisplayTask}
-test_filter = test_DisplayTask
-
+; src_filter = ${dir.test_DisplayTask}
+; test_filter = test_DisplayTask
 ; src_filter = ${dir.test_NintendoController}
 ; test_filter = test_NintendoController
 ; src_filter = ${dir.test_ThrottleState}
 ; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
-; src_filter = ${dir.test_QwiicButtonWithMock}
-; test_filter = test_QwiicButtonWithMock
-; src_filter = ${dir.test_QwiicButtonWithButton}
-; test_filter = test_QwiicButtonWithButton
-; src_filter = ${dir.tasks}
-; test_filter = tasks
-; src_filter = ${dir.test_TaskBase}
-; test_filter = test_TaskBase
+src_filter = ${dir.test_QwiicButtonWithButton}
+test_filter = test_QwiicButtonWithButton
 
 lib_deps =
   ${env.lib_deps}
