test_NintendoController working

--- a/platformio.ini
+++ b/platformio.ini
@@ -308,6 +308,14 @@ platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
+test_filter = 
+              ;test_BoardCommsTask
+              ; test_DisplayTask
+              test_NintendoController
+              ; test_QueueManager
+              ; test_QwiicButtonWithButton
+              ; test_ThrottleState
+
 ; src_filter = ${dir.test_BoardCommsTask}
 ; test_filter = test_BoardCommsTask
 ; src_filter = ${dir.test_DisplayTask}
@@ -318,8 +326,8 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 ; test_filter = test_ThrottleState
 ; src_filter = ${dir.test_QueueManager}
 ; test_filter = test_QueueManager
-src_filter = ${dir.test_QwiicButtonWithButton}
-test_filter = test_QwiicButtonWithButton
+; src_filter = ${dir.test_QwiicButtonWithButton}
+; test_filter = test_QwiicButtonWithButton
 
 lib_deps =
   ${env.lib_deps}
