test_QwiicButton test passes

--- a/platformio.ini
+++ b/platformio.ini
@@ -311,9 +311,9 @@ monitor_filters=${env:ESP32_Common.monitor_filters}
 test_filter = 
               ;test_BoardCommsTask
               ; test_DisplayTask
-              test_NintendoController
+              ; test_NintendoController
               ; test_QueueManager
-              ; test_QwiicButtonWithButton
+              test_QwiicButtonWithButton
               ; test_ThrottleState
 
 ; src_filter = ${dir.test_BoardCommsTask}
