ThrottleTask converted. Also fixed some MagThrottle stuff.

--- a/platformio.ini
+++ b/platformio.ini
@@ -152,8 +152,8 @@ build_flags =
   -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
 
-  -D PRINT_NRF24L01_DETAILS=1
-  ; -D PRINT_THROTTLE=1
+  ; -D PRINT_NRF24L01_DETAILS=1
+  -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
