test_QueueManager, tasks send and receive on same queue

--- a/platformio.ini
+++ b/platformio.ini
@@ -309,9 +309,11 @@ test_filter =
               ;test_BoardCommsTask
               ; test_DisplayTask
               ; test_NintendoController
-              ; test_QueueManager
-              test_QwiicButtonWithButton
+              test_QueueManager
+              ; test_QwiicButtonWithButton
               ; test_ThrottleState
+
+test_port = COM10
 
 ; src_filter = ${dir.test_BoardCommsTask}
 ; test_filter = test_BoardCommsTask
