--- a/platformio.ini
+++ b/platformio.ini
@@ -153,7 +153,7 @@ build_flags =
   -D PRINT_COMMS_STATE_EVENT=1
 
   ; -D PRINT_NRF24L01_DETAILS=1
-  -D PRINT_THROTTLE=1
+  ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
@@ -175,8 +175,7 @@ build_flags =
   -D FEATURE_PUSH_TO_START=true
   -D FEATURE_START_MOVING_BOOST=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  ; how often we store moving time data in memory
+    ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
 
@@ -202,8 +201,7 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
-  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  ; how often we store moving time data in memory
+    ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
 ;-------------------------------------------------------
@@ -253,8 +251,7 @@ build_flags =
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=500
   -D LONGCLICK_MS=1000
-  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=3
-  ; how often we store moving time data in memory
+    ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
 #------------------------------------------------
@@ -339,8 +336,7 @@ build_flags =
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
   -D SEND_TO_BOARD_INTERVAL=200
-  -D NUM_MISSED_PACKETS_MEANS_DISCONNECTED=1
-  ; -D PRINT_MUTEX_TAKE_SUCCESS=1
+    ; -D PRINT_MUTEX_TAKE_SUCCESS=1
   ; -D PRINT_MUTEX_GIVE_SUCCESS=1
   -D PRINT_DISP_STATE=1
   -D PRINT_DISP_STATE_EVENT=1
