--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,13 @@ framework = arduino
 
 ; upload_port = COM7
 ; monitor_port = COM7
-; upload_port = COM9
-; monitor_port = COM9
-upload_port = COM10
-monitor_port = COM10
+
+upload_port = COM6
+monitor_port = COM6
+
+; upload_port = COM10
+; monitor_port = COM10
+
 ; upload_port = COM25
 ; monitor_port = COM25
 monitor_speed = 115200
@@ -27,7 +30,14 @@ build_flags =
   -D VERSION=3.1
   -D VERSION_BOARD_COMPAT=3.1
   !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
+  !python ./getCurrentGitCommitHash.py ; GIT_COMMIT_HASH
   -D PRINT_THIS=1
+  -D DIR_CLOCKWISE=0
+  -D DIR_ANTI_CLOCKWISE=1
+  -D SWEEP_ANGLE=30.0
+  -D REMOTE_RED_REMOTE=1
+  -D REMOTE_M5STACK_FIRE=2
+
 
 
 lib_deps = 
@@ -53,10 +63,10 @@ lib_deps =
 
 [env:BOARD_RED_REMOTE]
 build_flags =
-  ; -D OPTION_USING_DISPLAY=1
+  -D REMOTE_USED=REMOTE_RED_REMOTE
   -D THROTTLE_PIN=27
   -D PRIMARY_BUTTON_PIN=21
-  -D THROTTLE_RAW_MAX=2530
+  -D THROTTLE_RAW_MAX=2587
   -D THROTTLE_RAW_CENTRE=1280
   -D THROTTLE_RAW_MIN=0
   -D THROTTLE_RAW_DEADBAND=50
@@ -65,13 +75,9 @@ build_flags =
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
-  ; -D OPTION_USING_DISPLAY=1
-  -D OPTION_USING_MAG_THROTTLE=1
-  -D SWEEP_ANGLE=30.0
+  -D REMOTE_USED=REMOTE_M5STACK_FIRE
   -D LIMIT_DELTA_MAX=50.0
   -D LIMIT_DELTA_MIN=3.0
-  -D DIR_CLOCKWISE=0
-  -D DIR_ANIT_CLOCKWISE=1
   -D THROTTLE_DIRECTION=DIR_CLOCKWISE
   -D BATTERY_MEASURE_PIN=34
 
@@ -82,11 +88,10 @@ board = nodemcu-32s
 monitor_filters = time, esp32_exception_decoder
 
 build_flags =
-  ${env:BOARD_NINTENDO_REMOTE.build_flags}
+  ${env:BOARD_RED_REMOTE.build_flags}
+  ; ${env:BOARD_NINTENDO_REMOTE.build_flags}
   -D IS_ESP32
   -D LONGCLICK_MS=1000
-  -D DISP_SOFTWARE_STATS_TIME=1500
-  -D DISP_BOARD_BATTERY_TIME=800
 
 [env:ESP32_SPI]
 build_flags = 
@@ -108,14 +113,14 @@ build_flags =
 
 [env:ESP32_CORES]
 build_flags =
-  -D DISPLAY_TASK_CORE=0  ; normally 0
-  -D COMMS_TASK_CORE=0
-  -D REMOTE_TASK_CORE=0
-  -D STATS_TASK_CORE=0
-  -D LED_TASK_CORE=0
-  -D PERIPHERALS_TASK_CORE=0
-  -D DEBUG_TASK_CORE=0
-  -D SPARKFUN_BUTTON_TASK_CORE=0
+  ; -D DISPLAY_TASK_CORE=0  ; normally 0
+  ; -D COMMS_TASK_CORE=0
+  ; -D REMOTE_TASK_CORE=0
+  ; -D STATS_TASK_CORE=0
+  ; -D LED_TASK_CORE=0
+  ; -D PERIPHERALS_TASK_CORE=0
+  ; -D DEBUG_TASK_CORE=0
+  ; -D SPARKFUN_BUTTON_TASK_CORE=0
 
 [env:USING_FEATURES]
 build_flags = 
@@ -141,7 +146,8 @@ lib_deps =
 
 build_flags = 
   ${env.build_flags}
-  ${env:NINTENDO_SPI.build_flags}
+  ${env:ESP32_SPI.build_flags}
+  ; ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
@@ -218,9 +224,9 @@ build_flags=
 
 [env:WioTerminal_CORES]
 build_flags=
-  -D DISPLAY_TASK_CORE=1
-  -D COMMS_TASK_CORE=1
-  -D BATTERY_TASK_CORE=1
+  ; -D DISPLAY_TASK_CORE=1
+  ; -D COMMS_TASK_CORE=1
+  ; -D BATTERY_TASK_CORE=1
 #------------------------------------------------
 
 [env:WioTerminal.debug]
