--- a/platformio.ini
+++ b/platformio.ini
@@ -165,15 +165,8 @@ build_flags =
 
   -D PRINT_DISP_STATE=1
   -D PRINT_DISP_STATE_EVENT=1
-  
-  ; -D PRINT_IF_TOTAL_FAILED_SENDING=1
-  ; -D PRINT_TX_TO_BOARD=1
-  ; -D PRINT_RX_FROM_BOARD=1
 
   ; -D PRINT_MUTEX_TAKE_FAIL=1
-  -D PRINT_MUTEX_SUCCESS=1
-
-  ; -D PRINT_NINTENDO_BUTTON=1
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
@@ -183,7 +176,6 @@ build_flags =
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
-  -D SUPPRESS_EV_COMMS_PKT_RXD=1
 
   ; -D COMMS_M5ATOM=03
 
@@ -195,15 +187,19 @@ platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
+lib_deps =
+  ${env.lib_deps}
+
 build_flags = 
 
   ${env.build_flags}
-  ${env:NINTENDO_SPI.build_flags}
+  ${env:ESP32_SPI.build_flags}
+  ; ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
+  ${env:USING_FEATURES.build_flags}
 
   -D RELEASE_BUILD=1
-  -D DEBUG_SERIAL
   -D FEATURE_CRUISE_CONTROL=true
   -D FEATURE_PUSH_TO_START=true
   -D SEND_TO_BOARD_INTERVAL=200
