Add board battery level to stopped screen (#42)
* Fixed TFT reference for Release.

* Showing board battery volts in STOPPED display

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,6 @@
 [platformio]
-; default_envs = tasks_tests
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 ; default_envs = throttle_mapper
