--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 ; default_envs = Button2.example
 ; default_envs = throttle_mapper
@@ -13,11 +13,12 @@ framework = arduino
 ; upload_port = COM7
 ; monitor_port = COM7
 
-upload_port = COM6
-monitor_port = COM6
+; upload_port = COM6
+; monitor_port = COM6
 
-; upload_port = COM10
-; monitor_port = COM10
+; NINTENDO REMOTE
+upload_port = COM10
+monitor_port = COM10
 
 ; upload_port = COM25
 ; monitor_port = COM25
@@ -35,7 +36,7 @@ build_flags =
   -D DIR_ANTI_CLOCKWISE=1
   -D SWEEP_ANGLE=30.0
   -D REMOTE_RED_REMOTE=1
-  -D REMOTE_M5STACK_FIRE=2
+  -D NINTENDO_REMOTE=2
 
 
 
@@ -51,7 +52,7 @@ lib_deps =
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git#introducing-mutex-to-update-etc
-  https://github.com/skelstar/Esk8-Shared.git#rtos-queue-subscribe ; v1.1
+  https://github.com/skelstar/Esk8-Shared.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
@@ -74,7 +75,7 @@ build_flags =
 
 [env:BOARD_NINTENDO_REMOTE]
 build_flags =
-  -D REMOTE_USED=REMOTE_M5STACK_FIRE
+  -D REMOTE_USED=NINTENDO_REMOTE
   -D LIMIT_DELTA_MAX=50.0
   -D LIMIT_DELTA_MIN=3.0
   -D THROTTLE_DIRECTION=DIR_CLOCKWISE
@@ -87,8 +88,8 @@ board = nodemcu-32s
 monitor_filters = time, esp32_exception_decoder
 
 build_flags =
-  ${env:BOARD_RED_REMOTE.build_flags}
-  ; ${env:BOARD_NINTENDO_REMOTE.build_flags}
+  ; ${env:BOARD_RED_REMOTE.build_flags}
+  ${env:BOARD_NINTENDO_REMOTE.build_flags}
   -D IS_ESP32
   -D LONGCLICK_MS=1000
 
@@ -145,8 +146,8 @@ lib_deps =
 
 build_flags = 
   ${env.build_flags}
-  ${env:ESP32_SPI.build_flags}
-  ; ${env:NINTENDO_SPI.build_flags}
+  ; ${env:ESP32_SPI.build_flags}
+  ${env:NINTENDO_SPI.build_flags}
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
