Made chaanges to the config. Nintendo remote wokring.

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,11 +34,8 @@ build_flags =
   -D PRINT_THIS=1
   -D DIR_CLOCKWISE=0
   -D DIR_ANTI_CLOCKWISE=1
-  -D SWEEP_ANGLE=30.0
-  -D REMOTE_RED_REMOTE=1
+  -D RED_REMOTE=1
   -D NINTENDO_REMOTE=2
-
-
 
 lib_deps = 
   https://github.com/LennartHennigs/Button2.git
@@ -61,9 +58,9 @@ lib_deps =
 
 #------------------------------------------------
 
-[env:BOARD_RED_REMOTE]
+[env:RED_REMOTE]
 build_flags =
-  -D REMOTE_USED=REMOTE_RED_REMOTE
+  -D REMOTE_USED=RED_REMOTE
   -D THROTTLE_PIN=27
   -D PRIMARY_BUTTON_PIN=21
   -D THROTTLE_RAW_MAX=2587
@@ -72,29 +69,6 @@ build_flags =
   -D THROTTLE_RAW_DEADBAND=50
   -D BATTERY_MEASURE_PIN=34
 
-
-[env:BOARD_NINTENDO_REMOTE]
-build_flags =
-  -D REMOTE_USED=NINTENDO_REMOTE
-  -D LIMIT_DELTA_MAX=50.0
-  -D LIMIT_DELTA_MIN=3.0
-  -D THROTTLE_DIRECTION=DIR_CLOCKWISE
-  -D BATTERY_MEASURE_PIN=34
-
-[env:ESP32_Common]
-platform = espressif32
-board = nodemcu-32s
-
-monitor_filters = time, esp32_exception_decoder
-
-build_flags =
-  ; ${env:BOARD_RED_REMOTE.build_flags}
-  ${env:BOARD_NINTENDO_REMOTE.build_flags}
-  -D IS_ESP32
-  -D LONGCLICK_MS=1000
-
-[env:ESP32_SPI]
-build_flags = 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=12 # Orange
   -D SOFT_SPI_SCK_PIN=15  # Yellow
@@ -102,8 +76,16 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-[env:NINTENDO_SPI]
-build_flags = 
+#------------------------------------------------
+
+[env:NINTENDO_REMOTE]
+build_flags =
+  -D REMOTE_USED=NINTENDO_REMOTE
+  -D LIMIT_DELTA_MAX=50.0
+  -D LIMIT_DELTA_MIN=3.0
+  -D THROTTLE_DIRECTION=DIR_CLOCKWISE
+  -D BATTERY_MEASURE_PIN=34
+
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=25 # Orange
   -D SOFT_SPI_SCK_PIN=15  # Yellow
@@ -111,46 +93,34 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-[env:ESP32_CORES]
+
+[env:ESP32_Common]
+
 build_flags =
-  ; -D DISPLAY_TASK_CORE=0  ; normally 0
-  ; -D COMMS_TASK_CORE=0
-  ; -D REMOTE_TASK_CORE=0
-  ; -D STATS_TASK_CORE=0
-  ; -D LED_TASK_CORE=0
-  ; -D PERIPHERALS_TASK_CORE=0
-  ; -D DEBUG_TASK_CORE=0
-  ; -D SPARKFUN_BUTTON_TASK_CORE=0
+  ; ${env:BOARD_RED_REMOTE.build_flags}
+  ${env:NINTENDO_REMOTE.build_flags}
+  -D IS_ESP32
+  -D LONGCLICK_MS=1000
 
-[env:USING_FEATURES]
-build_flags = 
-  -D USING_DISPLAY=1
-  -D USING_REMOTE=1
-  ; -D USING_STATS=1
-  -D USING_NINTENDO_BUTTONS=1
-  ; -D USING_LED=1
-  ; -D USING_DEBUG_TASK=1
-  -D USING_QWIIC_BUTTON_TASK=1
-
+;-------------------------------------------------------
+;-------------------------------------------------------
+;-------------------------------------------------------
+;-------------------------------------------------------
 ;-------------------------------------------------------
 
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-monitor_filters=${env:ESP32_Common.monitor_filters}
+platform = espressif32
+board = nodemcu-32s
+monitor_filters = time, esp32_exception_decoder
 
 lib_deps =
   ${env.lib_deps}
 
 build_flags = 
   ${env.build_flags}
-  ; ${env:ESP32_SPI.build_flags}
-  ${env:NINTENDO_SPI.build_flags}
-  ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
-  ${env:USING_FEATURES.build_flags}
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
@@ -158,7 +128,7 @@ build_flags =
   -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
 
-  ; -D PRINT_NRF24L01_DETAILS=1
+  -D PRINT_NRF24L01_DETAILS=1
   ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
