--- a/platformio.ini
+++ b/platformio.ini
@@ -102,12 +102,9 @@ build_flags =
   -D IS_ESP32
   -D LONGCLICK_MS=1000
 
-;-------------------------------------------------------
-;-------------------------------------------------------
-;-------------------------------------------------------
-;-------------------------------------------------------
-;-------------------------------------------------------
-
+;-------------------------------------------------------------------------------------
+;DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG 
+;-------------------------------------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 
@@ -149,7 +146,10 @@ build_flags =
 
   ; -D COMMS_M5ATOM=03
 
-;-------------------------------------------------------
+
+;-------------------------------------------------------------------------------------
+;RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED 
+;-------------------------------------------------------------------------------------
 [env:esp32dev.release]
 src_filter = ${dir.main}
 
@@ -176,7 +176,10 @@ build_flags =
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
-;-------------------------------------------------------
+
+;-------------------------------------------------------------------------------------
+; WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM 
+;-------------------------------------------------------------------------------------
 
 [env:WioTerminal_SPI]
 build_flags=
@@ -226,76 +229,19 @@ build_flags =
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
-#------------------------------------------------
 
-[env:Button2.example]
-src_filter = ${dir.button2}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
 
-build_flags = 
-  -D DEBUG_SERIAL
-#------------------------------------------------
-
-[env:throttle_mapper]
-src_filter = ${dir.throttle_mapper}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-
-build_flags = 
-  ${env:BOARD_NINTENDO_REMOTE.build_flags}
-  -D DEBUG_SERIAL
-  -D PRINT_THROTTLE=0
-#------------------------------------------------
-
-[env:mag_encoder]
-src_filter = ${dir.mag_encoder}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-; monitor_filters=${env:ESP32_Common.monitor_filters}
-
-test_filter = mag_encoder
-
-lib_deps = 
-  https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
-  https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
-
-build_flags = 
-  ${env:BOARD_NINTENDO_REMOTE.build_flags}
-  -D DEBUG_SERIAL
-  -D PRINT_THROTTLE=1
-  -D SWEEP_ANGLE=30.0
-  -D LIMIT_DELTA_MAX=50.0
-  -D LIMIT_DELTA_MIN=50.0
-
-;-------------------------------------------------------
+;-------------------------------------------------------------------------------------
+; TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS 
+;-------------------------------------------------------------------------------------
 [env:tasks_tests]
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
-test_filter = 
-              ;test_BoardCommsTask
-              ; test_DisplayTask
-              ; test_NintendoController
-              test_QueueManager
-              ; test_QwiicButtonWithButton
-              ; test_ThrottleState
+test_filter = test_QueueManager
 
 test_port = COM10
-
-; src_filter = ${dir.test_BoardCommsTask}
-; test_filter = test_BoardCommsTask
-; src_filter = ${dir.test_DisplayTask}
-; test_filter = test_DisplayTask
-; src_filter = ${dir.test_NintendoController}
-; test_filter = test_NintendoController
-; src_filter = ${dir.test_ThrottleState}
-; test_filter = test_ThrottleState
-; src_filter = ${dir.test_QueueManager}
-; test_filter = test_QueueManager
-; src_filter = ${dir.test_QwiicButtonWithButton}
-; test_filter = test_QwiicButtonWithButton
 
 lib_deps =
   ${env.lib_deps}
@@ -303,7 +249,14 @@ lib_deps =
 
 build_flags =
   ${env.build_flags}
-  ${env:NINTENDO_SPI.build_flags}
+  
+  -D SOFT_SPI_MOSI_PIN=13 ;Blue
+  -D SOFT_SPI_MISO_PIN=25 ;Orange
+  -D SOFT_SPI_SCK_PIN=15  ;Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
@@ -322,11 +275,5 @@ button2 = +<button2/>
 throttle_mapper = +<throttle_mapper/>
 mag_encoder = +<mag_encoder/>
 ; tasks = +<tasks/>
-test_BoardCommsTask = +<test_BoardCommsTask/>
-test_DisplayTask = +<test_DisplayTask/>
-test_NintendoController = +<test_NintendoController/>
 test_QueueManager = +<test_QueueManager/>
-test_QwiicButtonWithMock = +<test_QwiicButtonWithMock/>
-test_QwiicButtonWithButton = +<test_QwiicButtonWithButton/>
 test_TaskBase = +<test_TaskBase/>
-test_ThrottleState = +<test_ThrottleState/>
