Got working with IRL board

--- a/platformio.ini
+++ b/platformio.ini
@@ -83,7 +83,9 @@ build_flags =
   -D REMOTE_USED=NINTENDO_REMOTE
   -D LIMIT_DELTA_MAX=50.0
   -D LIMIT_DELTA_MIN=3.0
-  -D THROTTLE_DIRECTION=DIR_CLOCKWISE
+  -D SWEEP_ANGLE=30.0
+  -D DEADZONE=8.0
+  -D ACCEL_DIRECTION=DIR_CLOCKWISE
   -D BATTERY_MEASURE_PIN=34
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
@@ -93,6 +95,10 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+
+;-------------------------------------------------------------------------------------
+; COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON 
+;-------------------------------------------------------------------------------------
 
 [env:ESP32_Common]
 
@@ -126,7 +132,7 @@ build_flags =
   -D PRINT_COMMS_STATE_EVENT=1
 
   -D PRINT_NRF24L01_DETAILS=1
-  ; -D PRINT_THROTTLE=1
+  -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
