Got haptic working.

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,6 +51,7 @@ lib_deps =
 
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
+  https://github.com/sparkfun/SparkFun_Qwiic_Haptic_Driver_DA7280_Arduino_Library.git
 
 
 #------------------------------------------------
@@ -84,6 +85,7 @@ build_flags =
   -D DEADZONE=8.0
   -D ACCEL_DIRECTION=DIR_CLOCKWISE
   -D BATTERY_MEASURE_PIN=34
+  -D HAPTIC_FEEDBACK
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=25 # Orange
