HapticTask now using fsm

--- a/platformio.ini
+++ b/platformio.ini
@@ -135,8 +135,8 @@ build_flags =
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
 
-  -D PRINT_DISP_STATE=1
-  -D PRINT_DISP_STATE_EVENT=1
+  ; -D PRINT_DISP_STATE=1
+  ; -D PRINT_DISP_STATE_EVENT=1
 
   ; -D PRINT_MUTEX_TAKE_FAIL=1
 
