Working with RunningsState changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,12 +10,12 @@ framework = arduino
 ; upload_port = COM7
 ; monitor_port = COM7
 
-; upload_port = COM6
-; monitor_port = COM6
+upload_port = COM6
+monitor_port = COM6
 
 ; NINTENDO REMOTE
-upload_port = COM10
-monitor_port = COM10
+; upload_port = COM10
+; monitor_port = COM10
 
 ; upload_port = COM25
 ; monitor_port = COM25
@@ -85,7 +85,7 @@ build_flags =
   -D DEADZONE=8.0
   -D ACCEL_DIRECTION=DIR_CLOCKWISE
   -D BATTERY_MEASURE_PIN=34
-  -D HAPTIC_FEEDBACK
+  ; -D HAPTIC_FEEDBACK
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=25 # Orange
@@ -102,8 +102,8 @@ build_flags =
 [env:ESP32_Common]
 
 build_flags =
-  ; ${env:BOARD_RED_REMOTE.build_flags}
-  ${env:NINTENDO_REMOTE.build_flags}
+  ${env:RED_REMOTE.build_flags}
+  ; ${env:NINTENDO_REMOTE.build_flags}
   -D IS_ESP32
   -D LONGCLICK_MS=1000
 
