Huge clean out of unneeded files and lines. Ouchy.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,6 +74,8 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_DIGITALPRIMARYBUTTON_TASK
+
 #------------------------------------------------
 
 [env:NINTENDO_REMOTE]
@@ -85,7 +87,6 @@ build_flags =
   -D DEADZONE=8.0
   -D ACCEL_DIRECTION=DIR_CLOCKWISE
   -D BATTERY_MEASURE_PIN=34
-  ; -D HAPTIC_FEEDBACK
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=25 # Orange
@@ -94,6 +95,9 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_NINTENDOCLASSIC_TASK
+  -D USE_QWIIC_TASK
+  -D USE_HAPTIC_TASK
 
 ;-------------------------------------------------------------------------------------
 ; COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON 
@@ -108,7 +112,7 @@ build_flags =
   -D LONGCLICK_MS=1000
 
 ;-------------------------------------------------------------------------------------
-;DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG 
+; DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG 
 ;-------------------------------------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
@@ -134,26 +138,24 @@ build_flags =
   -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
-
   ; -D PRINT_DISP_STATE=1
   ; -D PRINT_DISP_STATE_EVENT=1
-
   ; -D PRINT_MUTEX_TAKE_FAIL=1
+
+  -D USE_STATS_TASK
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
-  -D FEATURE_CRUISE_CONTROL=true
-  -D FEATURE_PUSH_TO_START=true
-  -D FEATURE_START_MOVING_BOOST=true
+  -D FEATURE_CRUISE_CONTROL=1
+  ; -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
   ; -D COMMS_M5ATOM=03
 
-
 ;-------------------------------------------------------------------------------------
-;RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED 
+; RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED 
 ;-------------------------------------------------------------------------------------
 [env:esp32dev.release]
 src_filter = ${dir.main}
@@ -168,15 +170,15 @@ lib_deps =
 build_flags = 
 
   ${env.build_flags}
-  ${env:ESP32_SPI.build_flags}
-  ; ${env:NINTENDO_SPI.build_flags}
-  ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
-  ${env:USING_FEATURES.build_flags}
+  ; ${env:ESP32_SPI.build_flags}
+  ; ${env:NINTENDO_SPI.build_flags}
+  ; ${env:ESP32_CORES.build_flags}
+  ; ${env:USING_FEATURES.build_flags}
 
   -D RELEASE_BUILD=1
-  -D FEATURE_CRUISE_CONTROL=true
-  -D FEATURE_PUSH_TO_START=true
+  -D FEATURE_CRUISE_CONTROL=1
+  ; -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
