--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 #------------------------------------------------
 
@@ -45,7 +45,7 @@ lib_deps =
   https://github.com/FastLED/FastLED.git
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
-  https://github.com/skelstar/NRF24L01.Library.git#introducing-mutex-to-update-etc
+  https://github.com/skelstar/NRF24L01.Library.git
   https://github.com/skelstar/Esk8-Shared.git#migrating-tests-simplQueue
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
@@ -160,9 +160,9 @@ build_flags =
 [env:esp32dev.release]
 src_filter = ${dir.main}
 
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-monitor_filters=${env:ESP32_Common.monitor_filters}
+platform = espressif32
+board = nodemcu-32s
+monitor_filters = time, esp32_exception_decoder
 
 lib_deps =
   ${env.lib_deps}
@@ -177,6 +177,8 @@ build_flags =
   ; ${env:USING_FEATURES.build_flags}
 
   -D RELEASE_BUILD=1
+  -D DEBUG_BUILD=0
+
   -D FEATURE_CRUISE_CONTROL=1
   ; -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
