The one where we are using Haptic and a big cleanup (#43)
* Nintendo remote working OK

* Made chaanges to the config. Nintendo remote wokring.

* Removed unneeded files and config

* Online state fixed. i2c_mux fixed for MagThumbwheel

* StatsTask. Calculating success ratio and window success ration.

* Got working with IRL board

* _initialise()

* Tidy-ups

* Deleted RemoteTask

* Added RemoteTask back

* Moved priorities out into main

* Added HapticTask

* Added defines to each task incase not included

* Got haptic working.

* Pseudo state machine for HapticTask

* HapticTask now using fsm

* Haptic 2 pulses working.

* Working with RunningsState changes

* Got working with TaskList

* Version bump

* Huge clean out of unneeded files and lines. Ouchy.

* More cleanout

* 4.1 cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,9 +2,6 @@
 ; default_envs = esp32dev.debug
 default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
-; default_envs = Button2.example
-; default_envs = throttle_mapper
-; default_envs = mag_encoder
 #------------------------------------------------
 
 [env]
@@ -16,6 +13,7 @@ framework = arduino
 upload_port = COM6
 monitor_port = COM6
 
+; NINTENDO REMOTE
 ; upload_port = COM10
 ; monitor_port = COM10
 
@@ -26,18 +24,15 @@ monitor_speed = 115200
 ; test_filter = test_smoother
 
 build_flags =
-  -D VERSION=4.0
-  -D VERSION_BOARD_COMPAT=4.0
+  -D VERSION=4.1
+  -D VERSION_BOARD_COMPAT=4.1
   !python ./getCurrentGitBranch.py ; GIT_BRANCH_NAME
   !python ./getCurrentGitCommitHash.py ; GIT_COMMIT_HASH
   -D PRINT_THIS=1
   -D DIR_CLOCKWISE=0
   -D DIR_ANTI_CLOCKWISE=1
-  -D SWEEP_ANGLE=30.0
-  -D REMOTE_RED_REMOTE=1
-  -D REMOTE_M5STACK_FIRE=2
-
-
+  -D RED_REMOTE=1
+  -D NINTENDO_REMOTE=2
 
 lib_deps = 
   https://github.com/LennartHennigs/Button2.git
@@ -50,19 +45,20 @@ lib_deps =
   https://github.com/FastLED/FastLED.git
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
-  https://github.com/skelstar/NRF24L01.Library.git#introducing-mutex-to-update-etc
-  https://github.com/skelstar/Esk8-Shared.git#rtos-queue-subscribe ; v1.1
+  https://github.com/skelstar/NRF24L01.Library.git
+  https://github.com/skelstar/Esk8-Shared.git#migrating-tests-simplQueue
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
+  https://github.com/sparkfun/SparkFun_Qwiic_Haptic_Driver_DA7280_Arduino_Library.git
 
 
 #------------------------------------------------
 
-[env:BOARD_RED_REMOTE]
+[env:RED_REMOTE]
 build_flags =
-  -D REMOTE_USED=REMOTE_RED_REMOTE
+  -D REMOTE_USED=RED_REMOTE
   -D THROTTLE_PIN=27
   -D PRIMARY_BUTTON_PIN=21
   -D THROTTLE_RAW_MAX=2587
@@ -71,29 +67,6 @@ build_flags =
   -D THROTTLE_RAW_DEADBAND=50
   -D BATTERY_MEASURE_PIN=34
 
-
-[env:BOARD_NINTENDO_REMOTE]
-build_flags =
-  -D REMOTE_USED=REMOTE_M5STACK_FIRE
-  -D LIMIT_DELTA_MAX=50.0
-  -D LIMIT_DELTA_MIN=3.0
-  -D THROTTLE_DIRECTION=DIR_CLOCKWISE
-  -D BATTERY_MEASURE_PIN=34
-
-[env:ESP32_Common]
-platform = espressif32
-board = nodemcu-32s
-
-monitor_filters = time, esp32_exception_decoder
-
-build_flags =
-  ${env:BOARD_RED_REMOTE.build_flags}
-  ; ${env:BOARD_NINTENDO_REMOTE.build_flags}
-  -D IS_ESP32
-  -D LONGCLICK_MS=1000
-
-[env:ESP32_SPI]
-build_flags = 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=12 # Orange
   -D SOFT_SPI_SCK_PIN=15  # Yellow
@@ -101,8 +74,20 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-[env:NINTENDO_SPI]
-build_flags = 
+  -D USE_DIGITALPRIMARYBUTTON_TASK
+
+#------------------------------------------------
+
+[env:NINTENDO_REMOTE]
+build_flags =
+  -D REMOTE_USED=NINTENDO_REMOTE
+  -D LIMIT_DELTA_MAX=50.0
+  -D LIMIT_DELTA_MIN=3.0
+  -D SWEEP_ANGLE=30.0
+  -D DEADZONE=8.0
+  -D ACCEL_DIRECTION=DIR_CLOCKWISE
+  -D BATTERY_MEASURE_PIN=34
+
   -D SOFT_SPI_MOSI_PIN=13 # Blue
   -D SOFT_SPI_MISO_PIN=25 # Orange
   -D SOFT_SPI_SCK_PIN=15  # Yellow
@@ -110,46 +95,38 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-[env:ESP32_CORES]
+  -D USE_NINTENDOCLASSIC_TASK
+  -D USE_QWIIC_TASK
+  -D USE_HAPTIC_TASK
+
+;-------------------------------------------------------------------------------------
+; COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON COMMON 
+;-------------------------------------------------------------------------------------
+
+[env:ESP32_Common]
+
 build_flags =
-  ; -D DISPLAY_TASK_CORE=0  ; normally 0
-  ; -D COMMS_TASK_CORE=0
-  ; -D REMOTE_TASK_CORE=0
-  ; -D STATS_TASK_CORE=0
-  ; -D LED_TASK_CORE=0
-  ; -D PERIPHERALS_TASK_CORE=0
-  ; -D DEBUG_TASK_CORE=0
-  ; -D SPARKFUN_BUTTON_TASK_CORE=0
+  ${env:RED_REMOTE.build_flags}
+  ; ${env:NINTENDO_REMOTE.build_flags}
+  -D IS_ESP32
+  -D LONGCLICK_MS=1000
 
-[env:USING_FEATURES]
-build_flags = 
-  -D USING_DISPLAY=1
-  -D USING_REMOTE=1
-  ; -D USING_STATS=1
-  -D USING_NINTENDO_BUTTONS=1
-  ; -D USING_LED=1
-  ; -D USING_DEBUG_TASK=1
-  -D USING_QWIIC_BUTTON_TASK=1
-
-;-------------------------------------------------------
-
+;-------------------------------------------------------------------------------------
+; DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG DEBUG 
+;-------------------------------------------------------------------------------------
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-monitor_filters=${env:ESP32_Common.monitor_filters}
+platform = espressif32
+board = nodemcu-32s
+monitor_filters = time, esp32_exception_decoder
 
 lib_deps =
   ${env.lib_deps}
 
 build_flags = 
   ${env.build_flags}
-  ${env:ESP32_SPI.build_flags}
-  ; ${env:NINTENDO_SPI.build_flags}
-  ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
-  ${env:USING_FEATURES.build_flags}
 
   -D DEBUG_BUILD=1
   -D DEBUG_SERIAL
@@ -157,34 +134,35 @@ build_flags =
   -D PRINT_COMMS_STATE=1
   -D PRINT_COMMS_STATE_EVENT=1
 
-  ; -D PRINT_NRF24L01_DETAILS=1
-  ; -D PRINT_THROTTLE=1
+  -D PRINT_NRF24L01_DETAILS=1
+  -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
-
-  -D PRINT_DISP_STATE=1
-  -D PRINT_DISP_STATE_EVENT=1
-
+  ; -D PRINT_DISP_STATE=1
+  ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_MUTEX_TAKE_FAIL=1
+
+  -D USE_STATS_TASK
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
-  -D FEATURE_CRUISE_CONTROL=true
-  -D FEATURE_PUSH_TO_START=true
-  -D FEATURE_START_MOVING_BOOST=true
+  -D FEATURE_CRUISE_CONTROL=1
+  ; -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
   ; -D COMMS_M5ATOM=03
 
-;-------------------------------------------------------
+;-------------------------------------------------------------------------------------
+; RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED RELEASED 
+;-------------------------------------------------------------------------------------
 [env:esp32dev.release]
 src_filter = ${dir.main}
 
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-monitor_filters=${env:ESP32_Common.monitor_filters}
+platform = espressif32
+board = nodemcu-32s
+monitor_filters = time, esp32_exception_decoder
 
 lib_deps =
   ${env.lib_deps}
@@ -192,20 +170,25 @@ lib_deps =
 build_flags = 
 
   ${env.build_flags}
-  ${env:ESP32_SPI.build_flags}
-  ; ${env:NINTENDO_SPI.build_flags}
-  ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
-  ${env:USING_FEATURES.build_flags}
+  ; ${env:ESP32_SPI.build_flags}
+  ; ${env:NINTENDO_SPI.build_flags}
+  ; ${env:ESP32_CORES.build_flags}
+  ; ${env:USING_FEATURES.build_flags}
 
   -D RELEASE_BUILD=1
-  -D FEATURE_CRUISE_CONTROL=true
-  -D FEATURE_PUSH_TO_START=true
+  -D DEBUG_BUILD=0
+
+  -D FEATURE_CRUISE_CONTROL=1
+  ; -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
-;-------------------------------------------------------
+
+;-------------------------------------------------------------------------------------
+; WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM WIO TERM 
+;-------------------------------------------------------------------------------------
 
 [env:WioTerminal_SPI]
 build_flags=
@@ -255,76 +238,19 @@ build_flags =
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
   -D SUPPRESS_EV_COMMS_PKT_RXD=1
-#------------------------------------------------
 
-[env:Button2.example]
-src_filter = ${dir.button2}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
 
-build_flags = 
-  -D DEBUG_SERIAL
-#------------------------------------------------
-
-[env:throttle_mapper]
-src_filter = ${dir.throttle_mapper}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-
-build_flags = 
-  ${env:BOARD_NINTENDO_REMOTE.build_flags}
-  -D DEBUG_SERIAL
-  -D PRINT_THROTTLE=0
-#------------------------------------------------
-
-[env:mag_encoder]
-src_filter = ${dir.mag_encoder}
-platform=${env:ESP32_Common.platform}
-board=${env:ESP32_Common.board}
-; monitor_filters=${env:ESP32_Common.monitor_filters}
-
-test_filter = mag_encoder
-
-lib_deps = 
-  https://github.com/Seeed-Studio/Seeed_Arduino_AS5600.git
-  https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
-
-build_flags = 
-  ${env:BOARD_NINTENDO_REMOTE.build_flags}
-  -D DEBUG_SERIAL
-  -D PRINT_THROTTLE=1
-  -D SWEEP_ANGLE=30.0
-  -D LIMIT_DELTA_MAX=50.0
-  -D LIMIT_DELTA_MIN=50.0
-
-;-------------------------------------------------------
+;-------------------------------------------------------------------------------------
+; TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS TEST TASKS 
+;-------------------------------------------------------------------------------------
 [env:tasks_tests]
 platform=${env:ESP32_Common.platform}
 board=${env:ESP32_Common.board}
 monitor_filters=${env:ESP32_Common.monitor_filters}
 
-test_filter = 
-              ;test_BoardCommsTask
-              ; test_DisplayTask
-              ; test_NintendoController
-              test_QueueManager
-              ; test_QwiicButtonWithButton
-              ; test_ThrottleState
+test_filter = test_QueueManager
 
 test_port = COM10
-
-; src_filter = ${dir.test_BoardCommsTask}
-; test_filter = test_BoardCommsTask
-; src_filter = ${dir.test_DisplayTask}
-; test_filter = test_DisplayTask
-; src_filter = ${dir.test_NintendoController}
-; test_filter = test_NintendoController
-; src_filter = ${dir.test_ThrottleState}
-; test_filter = test_ThrottleState
-; src_filter = ${dir.test_QueueManager}
-; test_filter = test_QueueManager
-; src_filter = ${dir.test_QwiicButtonWithButton}
-; test_filter = test_QwiicButtonWithButton
 
 lib_deps =
   ${env.lib_deps}
@@ -332,7 +258,14 @@ lib_deps =
 
 build_flags =
   ${env.build_flags}
-  ${env:NINTENDO_SPI.build_flags}
+  
+  -D SOFT_SPI_MOSI_PIN=13 ;Blue
+  -D SOFT_SPI_MISO_PIN=25 ;Orange
+  -D SOFT_SPI_SCK_PIN=15  ;Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
   ${env:ESP32_CORES.build_flags}
   ${env:ESP32_Common.build_flags}
   ${env:USING_FEATURES.build_flags}
@@ -347,15 +280,6 @@ build_flags =
 
 [dir]
 main = +<main/>
-button2 = +<button2/>
-throttle_mapper = +<throttle_mapper/>
-mag_encoder = +<mag_encoder/>
 ; tasks = +<tasks/>
-test_BoardCommsTask = +<test_BoardCommsTask/>
-test_DisplayTask = +<test_DisplayTask/>
-test_NintendoController = +<test_NintendoController/>
 test_QueueManager = +<test_QueueManager/>
-test_QwiicButtonWithMock = +<test_QwiicButtonWithMock/>
-test_QwiicButtonWithButton = +<test_QwiicButtonWithButton/>
 test_TaskBase = +<test_TaskBase/>
-test_ThrottleState = +<test_ThrottleState/>
