--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 #------------------------------------------------
 
@@ -10,8 +10,11 @@ framework = arduino
 ; upload_port = COM7
 ; monitor_port = COM7
 
-upload_port = COM6
-monitor_port = COM6
+; upload_port = COM6
+; monitor_port = COM6
+
+upload_port = COM9
+monitor_port = COM9
 
 ; NINTENDO REMOTE
 ; upload_port = COM10
@@ -32,7 +35,8 @@ build_flags =
   -D DIR_CLOCKWISE=0
   -D DIR_ANTI_CLOCKWISE=1
   -D RED_REMOTE=1
-  -D NINTENDO_REMOTE=2
+  -D PURPLE_REMOTE=2
+  -D NINTENDO_REMOTE=3
 
 lib_deps = 
   https://github.com/LennartHennigs/Button2.git
@@ -52,6 +56,7 @@ lib_deps =
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
   https://github.com/sparkfun/SparkFun_Qwiic_Haptic_Driver_DA7280_Arduino_Library.git
+  robtillaart/ADS1X15 @ ^0.3.1
 
 
 #------------------------------------------------
@@ -75,6 +80,29 @@ build_flags =
   -D SOFTSPI
 
   -D USE_DIGITALPRIMARYBUTTON_TASK
+
+[env:PURPLE_REMOTE]
+build_flags =
+  -D REMOTE_USED=PURPLE_REMOTE
+  -D ACCEL_DIRECTION=DIR_CLOCKWISE
+  -D THROTTLE_RAW_MAX=15100
+  -D THROTTLE_RAW_CENTRE=8200
+  -D THROTTLE_RAW_MIN=1050
+  -D THROTTLE_RAW_DEADBAND=50
+  -D BATTERY_MEASURE_PIN=34
+
+  -D SOFT_SPI_MOSI_PIN=13 # Blue
+  -D SOFT_SPI_MISO_PIN=25 # Orange
+  -D SOFT_SPI_SCK_PIN=15  # Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
+  -D USE_I2C_ANALOG_TRIGGER
+  -D USE_NINTENDOCLASSIC_TASK
+  -D USE_HAPTIC_TASK
+
+  ; -D USE_DIGITALPRIMARYBUTTON_TASK
 
 #------------------------------------------------
 
@@ -106,7 +134,8 @@ build_flags =
 [env:ESP32_Common]
 
 build_flags =
-  ${env:RED_REMOTE.build_flags}
+  ; ${env:RED_REMOTE.build_flags}
+  ${env:PURPLE_REMOTE.build_flags}
   ; ${env:NINTENDO_REMOTE.build_flags}
   -D IS_ESP32
   -D LONGCLICK_MS=1000
