--- a/platformio.ini
+++ b/platformio.ini
@@ -79,6 +79,7 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
 
 [env:PURPLE_REMOTE]
@@ -123,6 +124,7 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_TDISPLAY
   -D USE_NINTENDOCLASSIC_TASK
   -D USE_QWIIC_TASK
   -D USE_HAPTIC_TASK
