Added USE_TDISPLAY flag.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,6 +74,7 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
 
 #------------------------------------------------
@@ -95,6 +96,7 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_TDISPLAY
   -D USE_NINTENDOCLASSIC_TASK
   -D USE_QWIIC_TASK
   -D USE_HAPTIC_TASK
