Sorted out throttle ranges

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,8 @@ build_flags =
   -D PRINT_THIS=1
   -D DIR_CLOCKWISE=0
   -D DIR_ANTI_CLOCKWISE=1
+  -D DIR_PUSH_TO_ACCEL=0
+  -D DIR_PULL_TO_ACCEL=1
   -D RED_REMOTE=1
   -D PURPLE_REMOTE=2
   -D NINTENDO_REMOTE=3
@@ -85,11 +87,11 @@ build_flags =
 [env:PURPLE_REMOTE]
 build_flags =
   -D REMOTE_USED=PURPLE_REMOTE
-  -D ACCEL_DIRECTION=DIR_CLOCKWISE
+  -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
   -D THROTTLE_RAW_MAX=15100
   -D THROTTLE_RAW_CENTRE=8200
   -D THROTTLE_RAW_MIN=1050
-  -D THROTTLE_RAW_DEADBAND=50
+  -D THROTTLE_RAW_DEADBAND=100
   -D BATTERY_MEASURE_PIN=34
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
