--- a/platformio.ini
+++ b/platformio.ini
@@ -59,6 +59,8 @@ lib_deps =
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
   https://github.com/sparkfun/SparkFun_Qwiic_Haptic_Driver_DA7280_Arduino_Library.git
   robtillaart/ADS1X15 @ ^0.3.1
+  https://github.com/olikraus/U8g2_Arduino.git
+
 
 
 #------------------------------------------------
@@ -101,8 +103,9 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_QWIIC_DISPLAY_TASK
   -D USE_I2C_ANALOG_TRIGGER
-  -D USE_NINTENDOCLASSIC_TASK
+  ; -D USE_NINTENDOCLASSIC_TASK
   -D USE_HAPTIC_TASK
 
   ; -D USE_DIGITALPRIMARYBUTTON_TASK
