--- a/platformio.ini
+++ b/platformio.ini
@@ -52,13 +52,15 @@ lib_deps =
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git
-  https://github.com/skelstar/Esk8-Shared.git#v4.1
+  https://github.com/skelstar/Esk8-Shared.git#latest
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
   https://github.com/sparkfun/SparkFun_Qwiic_Haptic_Driver_DA7280_Arduino_Library.git
   robtillaart/ADS1X15 @ ^0.3.1
+  https://github.com/olikraus/U8g2_Arduino.git
+
 
 
 #------------------------------------------------
@@ -101,8 +103,9 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_QWIIC_DISPLAY_TASK
   -D USE_I2C_ANALOG_TRIGGER
-  -D USE_NINTENDOCLASSIC_TASK
+  ; -D USE_NINTENDOCLASSIC_TASK
   -D USE_HAPTIC_TASK
 
   ; -D USE_DIGITALPRIMARYBUTTON_TASK
@@ -175,7 +178,8 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_MUTEX_TAKE_FAIL=1
 
-  -D USE_STATS_TASK
+  ; -D USE_STATS_TASK
+  -D USE_REMOTE_TASK
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
@@ -211,6 +215,8 @@ build_flags =
 
   -D RELEASE_BUILD=1
   -D DEBUG_BUILD=0
+
+  -D USE_REMOTE_TASK
 
   -D FEATURE_CRUISE_CONTROL=1
   ; -D FEATURE_PUSH_TO_START=1
