Got Purple remote working with analog trigger.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,12 @@ framework = arduino
 ; upload_port = COM6
 ; monitor_port = COM6
 
-upload_port = COM9
-monitor_port = COM9
+; upload_port = COM9
+; monitor_port = COM9
 
-; NINTENDO REMOTE
-; upload_port = COM10
-; monitor_port = COM10
+; PURPLE REMOTE
+upload_port = COM10
+monitor_port = COM10
 
 ; upload_port = COM25
 ; monitor_port = COM25
@@ -85,14 +85,16 @@ build_flags =
 
   -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
+  -D USE_ANALOG_TRIGGER
 
 [env:PURPLE_REMOTE]
 build_flags =
   -D REMOTE_USED=PURPLE_REMOTE
   -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
-  -D THROTTLE_RAW_MAX=15100
-  -D THROTTLE_RAW_CENTRE=8200
-  -D THROTTLE_RAW_MIN=1050
+  -D THROTTLE_PIN=32
+  -D THROTTLE_RAW_MAX=4058
+  -D THROTTLE_RAW_CENTRE=2169
+  -D THROTTLE_RAW_MIN=730
   -D THROTTLE_RAW_DEADBAND=100
   -D BATTERY_MEASURE_PIN=34
 
@@ -103,12 +105,11 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-  -D USE_QWIIC_DISPLAY_TASK
-  -D USE_I2C_ANALOG_TRIGGER
-  ; -D USE_NINTENDOCLASSIC_TASK
+  -D PRIMARY_BUTTON_PIN=0
+  -D USE_ANALOG_TRIGGER
   -D USE_HAPTIC_TASK
-
-  ; -D USE_DIGITALPRIMARYBUTTON_TASK
+  -D USE_TDISPLAY
+  -D USE_DIGITALPRIMARYBUTTON_TASK
 
 #------------------------------------------------
 
