--- a/platformio.ini
+++ b/platformio.ini
@@ -10,12 +10,15 @@ framework = arduino
 ; upload_port = COM7
 ; monitor_port = COM7
 
-upload_port = COM6
-monitor_port = COM6
+; upload_port = COM6
+; monitor_port = COM6
 
-; NINTENDO REMOTE
-; upload_port = COM10
-; monitor_port = COM10
+; upload_port = COM9
+; monitor_port = COM9
+
+; PURPLE REMOTE
+upload_port = COM10
+monitor_port = COM10
 
 ; upload_port = COM25
 ; monitor_port = COM25
@@ -31,8 +34,11 @@ build_flags =
   -D PRINT_THIS=1
   -D DIR_CLOCKWISE=0
   -D DIR_ANTI_CLOCKWISE=1
+  -D DIR_PUSH_TO_ACCEL=0
+  -D DIR_PULL_TO_ACCEL=1
   -D RED_REMOTE=1
-  -D NINTENDO_REMOTE=2
+  -D PURPLE_REMOTE=2
+  -D NINTENDO_REMOTE=3
 
 lib_deps = 
   https://github.com/LennartHennigs/Button2.git
@@ -46,12 +52,15 @@ lib_deps =
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git
-  https://github.com/skelstar/Esk8-Shared.git#v4.1
+  https://github.com/skelstar/Esk8-Shared.git#latest
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
   https://github.com/sparkfun/SparkFun_Qwiic_Button_Arduino_Library.git
   https://github.com/sparkfun/SparkFun_Qwiic_Haptic_Driver_DA7280_Arduino_Library.git
+  robtillaart/ADS1X15 @ ^0.3.1
+  https://github.com/olikraus/U8g2_Arduino.git
+
 
 
 #------------------------------------------------
@@ -74,6 +83,32 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_TDISPLAY
+  -D USE_DIGITALPRIMARYBUTTON_TASK
+  -D USE_ANALOG_TRIGGER
+
+[env:PURPLE_REMOTE]
+build_flags =
+  -D REMOTE_USED=PURPLE_REMOTE
+  -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
+  -D THROTTLE_PIN=32
+  -D THROTTLE_RAW_MAX=4058
+  -D THROTTLE_RAW_CENTRE=2169
+  -D THROTTLE_RAW_MIN=730
+  -D THROTTLE_RAW_DEADBAND=100
+  -D BATTERY_MEASURE_PIN=34
+
+  -D SOFT_SPI_MOSI_PIN=13 # Blue
+  -D SOFT_SPI_MISO_PIN=25 # Orange
+  -D SOFT_SPI_SCK_PIN=15  # Yellow
+  -D NRF_CE=17
+  -D NRF_CS=2
+  -D SOFTSPI
+
+  -D PRIMARY_BUTTON_PIN=0
+  -D USE_ANALOG_TRIGGER
+  -D USE_HAPTIC_TASK
+  -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
 
 #------------------------------------------------
@@ -95,6 +130,7 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
+  -D USE_TDISPLAY
   -D USE_NINTENDOCLASSIC_TASK
   -D USE_QWIIC_TASK
   -D USE_HAPTIC_TASK
@@ -106,7 +142,8 @@ build_flags =
 [env:ESP32_Common]
 
 build_flags =
-  ${env:RED_REMOTE.build_flags}
+  ; ${env:RED_REMOTE.build_flags}
+  ${env:PURPLE_REMOTE.build_flags}
   ; ${env:NINTENDO_REMOTE.build_flags}
   -D IS_ESP32
   -D LONGCLICK_MS=1000
@@ -142,7 +179,8 @@ build_flags =
   ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_MUTEX_TAKE_FAIL=1
 
-  -D USE_STATS_TASK
+  ; -D USE_STATS_TASK
+  -D USE_REMOTE_TASK
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
@@ -178,6 +216,8 @@ build_flags =
 
   -D RELEASE_BUILD=1
   -D DEBUG_BUILD=0
+
+  -D USE_REMOTE_TASK
 
   -D FEATURE_CRUISE_CONTROL=1
   ; -D FEATURE_PUSH_TO_START=1
