Throttle now working on i2c again. Haptic checked and not used if not connected.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 #------------------------------------------------
 
@@ -91,11 +91,18 @@ build_flags =
 build_flags =
   -D REMOTE_USED=PURPLE_REMOTE
   -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
+  ; analog
   -D THROTTLE_PIN=32
   -D THROTTLE_RAW_MAX=4058
   -D THROTTLE_RAW_CENTRE=2169
   -D THROTTLE_RAW_MIN=730
-  -D THROTTLE_RAW_DEADBAND=100
+  -D THROTTLE_RAW_DEADBAND=200
+  ; i2c analog
+  -D THROTTLE_I2C_RAW_MAX=15040
+  -D THROTTLE_I2C_RAW_CENTRE=2169
+  -D THROTTLE_I2C_RAW_MIN=1264
+  -D THROTTLE_I2C_RAW_DEADBAND=200
+  ;
   -D BATTERY_MEASURE_PIN=34
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
@@ -106,8 +113,9 @@ build_flags =
   -D SOFTSPI
 
   -D PRIMARY_BUTTON_PIN=0
-  -D USE_ANALOG_TRIGGER
-  -D USE_HAPTIC_TASK
+  ; -D USE_ANALOG_TRIGGER
+  -D USE_I2C_ANALOG_TRIGGER
+  ; -D USE_HAPTIC_TASK
   -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
 
@@ -185,7 +193,7 @@ build_flags =
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
   -D FEATURE_CRUISE_CONTROL=1
-  ; -D FEATURE_PUSH_TO_START=1
+  -D FEATURE_PUSH_TO_START=0
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
@@ -219,8 +227,8 @@ build_flags =
 
   -D USE_REMOTE_TASK
 
-  -D FEATURE_CRUISE_CONTROL=1
-  ; -D FEATURE_PUSH_TO_START=1
+  -D FEATURE_CRUISE_CONTROL=false
+  -D FEATURE_PUSH_TO_START=false
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
@@ -272,7 +280,7 @@ build_flags =
   ; -D PRINT_RX_FROM_BOARD=1
   
   -D FEATURE_CRUISE_CONTROL=true
-  -D FEATURE_PUSH_TO_START=true
+  -D FEATURE_PUSH_TO_START=false
   -D SEND_TO_BOARD_INTERVAL=500
   -D LONGCLICK_MS=1000
     ; how often we store moving time data in memory
