Got purple remote going (final design?). FEATURES_USE_DEADMAN logic

--- a/platformio.ini
+++ b/platformio.ini
@@ -93,8 +93,8 @@ build_flags =
   -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
   ; analog
   -D THROTTLE_PIN=32
-  -D THROTTLE_RAW_MAX=4058
-  -D THROTTLE_RAW_CENTRE=2169
+  -D THROTTLE_RAW_MAX=3900
+  -D THROTTLE_RAW_CENTRE=2286
   -D THROTTLE_RAW_MIN=730
   -D THROTTLE_RAW_DEADBAND=200
   ; i2c analog
@@ -102,7 +102,7 @@ build_flags =
   -D THROTTLE_I2C_RAW_CENTRE=2169
   -D THROTTLE_I2C_RAW_MIN=1264
   -D THROTTLE_I2C_RAW_DEADBAND=200
-  ;
+
   -D BATTERY_MEASURE_PIN=34
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
@@ -112,9 +112,9 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-  -D PRIMARY_BUTTON_PIN=0
-  ; -D USE_ANALOG_TRIGGER
-  -D USE_I2C_ANALOG_TRIGGER
+  -D PRIMARY_BUTTON_PIN=27
+  -D USE_ANALOG_TRIGGER
+  ; -D USE_I2C_ANALOG_TRIGGER
   ; -D USE_HAPTIC_TASK
   -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
@@ -193,7 +193,8 @@ build_flags =
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
   -D FEATURE_CRUISE_CONTROL=1
-  -D FEATURE_PUSH_TO_START=0
+  -D FEATURE_PUSH_TO_START=1
+  -D FEATURE_USE_DEADMAN=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
@@ -227,8 +228,9 @@ build_flags =
 
   -D USE_REMOTE_TASK
 
+  -D FEATURE_USE_DEADMAN=1
   -D FEATURE_CRUISE_CONTROL=false
-  -D FEATURE_PUSH_TO_START=false
+  -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
